--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -750,6 +750,12 @@ text-align: center;
 		width: 640px;
 		margin-left:-35px;
 		}
+		
+	.nothing{
+	font-style :"georgia";
+	font-size: 14px;
+	margin-top: 30px;
+	}
 }
 
 
@@ -1179,7 +1185,7 @@ text-align: center;
 	#challenge-header{
 		font-family: "gotham-Bold";
 		font-size: 18px;
-		margin-left:193px;	
+		margin-left:173px;	
 		
 		li{
 		display: inline-block;
