--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,3 @@
-<script type="text/javascript" src="jquery.simple-text-rotator.js"></script>
-
 <section id="video_signup">
 	
   <div class="container">
@@ -181,3 +179,5 @@
 
   </div>
 </section>  
+<script type="text/javascript" src="jquery.simple-text-rotator.js"></script>
+<link href='simpletextrotator.css' rel='stylesheet' type='text/css'>
