--- a/app/views/shared/_argument_neutre_form.html.erb
+++ b/app/views/shared/_argument_neutre_form.html.erb
@@ -23,7 +23,7 @@
 		
 		<div class='row'>
 			<div class="span4" id="forme-argument">
-				<div class='texte'> Rajouter une image :</div>
+				<div class='texte'> Ajouter une image :</div>
 				<div class="box-pic"><%= image_tag("box-pic-01.png")%></div>							
 			</div>
 		</div>
